--- a/wf-region/src/main/resources/pattern/print/subsidy_declaration.html
+++ b/wf-region/src/main/resources/pattern/print/subsidy_declaration.html
@@ -125,11 +125,11 @@
             <tr>
                 <td class="ta-l">
                     Розділ I. Загальні відомості<br />
-                    <div class="under_field_line ta-l fw"><i>1.[bankIdlastName] [bankIdfirstName] [bankIdmiddleName]</i><span>(прізвище, ім’я, по батькові)</span></div>
+                    <div class="under_field_line ta-l fw"><i>1.<u>[bankIdlastName] [bankIdfirstName] [bankIdmiddleName]</u></i><span>(прізвище, ім’я, по батькові)</span></div>
                     <div class="under_field_line wub ta-l">2. Характеристика житлового приміщення/будинку:<br />
-                        загальна площа [total_place] кв. метрів; опалювальна площа [total_place] кв. метрів;<br />
-                        будинок [place_type];<br />
-                        кількість поверхів у будинку [floors]
+                        загальна площа <u>[total_place]</u> кв. метрів; опалювальна площа <u>[total_place]</u> кв. метрів;<br />
+                        будинок <u>[place_type]</u>;<br />
+                        кількість поверхів у будинку <u>[floors]</u>
                     </div>
                     <div class="under_field_line wub ta-l">3. Особи, які зареєстровані (для орендарів — особи, які фактично проживають) у житловому приміщенні/будинку</div>
                 </td>
@@ -144,25 +144,25 @@
                 <td>Примітки</td>
             </tr>
             <tr>
-                <td class="h10">fio1</td>
-                <td>date1</td>
-                <td>passport1</td>
-                <td>card1</td>
-                <td>comment1</td>
+                <td class="h10">[fio1]</td>
+                <td>[date1]</td>
+                <td>[passport1]</td>
+                <td>[card1]</td>
+                <td>[comment1]</td>
             </tr>
             <tr>
-                <td class="h10">fio2</td>
-                <td>date2</td>
-                <td>passport2</td>
-                <td>card2</td>
-                <td>comment2</td>
+                <td class="h10">[fio2]</td>
+                <td>[date2]</td>
+                <td>[passport2]</td>
+                <td>[card2]</td>
+                <td>[comment2]</td>
             </tr>
             <tr>
-                <td class="h10">fio3</td>
-                <td>date3</td>
-                <td>passport3</td>
-                <td>card3</td>
-                <td>comment3</td>
+                <td class="h10">[fio3]</td>
+                <td>[date3]</td>
+                <td>[passport3]</td>
+                <td>[card3]</td>
+                <td>[comment3]</td>
             </tr>
             <tr>
                 <td class="h10"></td>
@@ -214,19 +214,19 @@
                 <td class="w265"></td>
             </tr>
             <tr>
-                <td class="h10">fio1</td>
-                <td>income1</td>
-                <td>org1</td>
+                <td class="h10">[fio1]</td>
+                <td>[income1]</td>
+                <td>[org1]</td>
             </tr>
             <tr>
-                <td class="h10">fio2</td>
-                <td>income2</td>
-                <td>org2</td>
+                <td class="h10">[fio2]</td>
+                <td>[income2]</td>
+                <td>[org2]</td>
             </tr>
             <tr>
-                <td class="h10">fio3</td>
-                <td>income3</td>
-                <td>org3</td>
+                <td class="h10">[fio3]</td>
+                <td>[income3]</td>
+                <td>[org3]</td>
             </tr>
             <tr>
                 <td class="h10"></td>
