--- a/wf-region/src/main/resources/pattern/print/subsidy_zayava.html
+++ b/wf-region/src/main/resources/pattern/print/subsidy_zayava.html
@@ -120,10 +120,10 @@
         <div class="line_col ta-c m-t-25">
             ЗАЯВА<br />
             про призначення житлової субсидії<br />
-            <div class="ta-c"><i>Від [bankIdlastName] [bankIdfirstName] [bankIdmiddleName]</i><span>(прізвище, ім’я, по батькові)</span></div>
-            <div class="under_field_line ta-c"><i>зареєстроване (для орендарів — фактичне) місце проживання:</i></div>
-            <div class="ta-c"><i>[place_of_living]</i></div>
-            <div class="ta-c"><i>контактний телефон [phone]</i>
+            <div class="ta-l">Від [bankIdlastName] [bankIdfirstName] [bankIdmiddleName]<span>(прізвище, ім’я, по батькові)</span></div>
+            <div class="under_field_line ta-l">зареєстроване (для орендарів — фактичне) місце проживання:</div>
+            <div class="ta-l">[place_of_living]</div>
+            <div class="ta-l">контактний телефон [phone]
                 <div class="under_field_line ta-l m-l-300"><i>паспорт: </i>
                     <div class="under_field_line ta-c m-l-180"></div></div></div>
             <div class="under_field_line ta-l"><i>[bankIdPassport]</i><span>(серія, номер, ким і коли виданий)</span><div class="month-fl"><span></span><span></span><span></span>р.</div></div>
