--- a/wf-region/src/main/resources/pattern/print/subsidy_declaration.html
+++ b/wf-region/src/main/resources/pattern/print/subsidy_declaration.html
@@ -209,14 +209,9 @@
                 </td>
             </tr>
             <tr>
-                <td class="h10"></td>
-                <td class="w101 p-clear"></td>
-                <td class="w265"></td>
-            </tr>
-            <tr>
                 <td class="h10">[fio1]</td>
-                <td>[income1]</td>
-                <td>[org1]</td>
+                <td class="w101 p-clear">[income1]</td>
+                <td class="w265">[org1]</td>
             </tr>
             <tr>
                 <td class="h10">[fio2]</td>
@@ -227,6 +222,11 @@
                 <td class="h10">[fio3]</td>
                 <td>[income3]</td>
                 <td>[org3]</td>
+            </tr>
+            <tr>
+                <td class="h10"></td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td class="h10"></td>
