--- a/wf-region/src/main/resources/pattern/print/subsidy_zayava.html
+++ b/wf-region/src/main/resources/pattern/print/subsidy_zayava.html
@@ -1,118 +1,130 @@
-<div>
-    <style type="text/css">
-        html, body {margin: 0; padding: 0; height: 100%; font: 400 14px/16px 'Tahoma';}
+<!DOCTYPE html>
+<html>
+<head lang="ru">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>ДЕКЛАРАЦІЯ</title>
 
-        .print_wrap {width: 705px; padding: 35px 25px 85px 35px; min-height: 100%; height: 100%; margin: 0 auto;}
+    <!-- Styles :: THEME -->
+    <link rel="stylesheet" href="media_print.css"/>
+    <link rel="stylesheet" href="documents.css"/>
+</head>
+<body>
+<section class="print_wrap">
+    <div>
+        <style type="text/css">
+            html, body {margin: 0; padding: 0; height: 100%; font: 400 14px/16px 'Tahoma';}
 
-        .ta-r {text-align: right;}
-        .ta-l {text-align: left;}
-        .ta-c {text-align: center;}
+            .print_wrap {width: 705px; padding: 35px 25px 85px 35px; min-height: 100%; height: 100%; margin: 0 auto;}
 
-        .ti-15 {text-indent: 25px;}
+            .ta-r {text-align: right;}
+            .ta-l {text-align: left;}
+            .ta-c {text-align: center;}
 
-        .fw {width: 100%;}
+            .ti-15 {text-indent: 25px;}
 
-        .w350 {width: 350px;}
-        .w225 {width: 225px;}
-        .w145 {width: 145px;}
-        .w185 {width: 185px;}
-        .w135 {width: 135px;}
-        .w265 {width: 265px;}
+            .fw {width: 100%;}
 
-        .b-t-0 {border-top: 0 !important;}
-        .b-l-0 {border-left: 0 !important;}
-        .b-r-0 {border-right: 0 !important;}
-        .b-b-0 {border-bottom: 0 !important;}
+            .w350 {width: 350px;}
+            .w225 {width: 225px;}
+            .w145 {width: 145px;}
+            .w185 {width: 185px;}
+            .w135 {width: 135px;}
+            .w265 {width: 265px;}
 
-        .h10 {height: 12px;}
+            .b-t-0 {border-top: 0 !important;}
+            .b-l-0 {border-left: 0 !important;}
+            .b-r-0 {border-right: 0 !important;}
+            .b-b-0 {border-bottom: 0 !important;}
 
-        .m-t-15 {margin-top: 15px !important;}
-        .m-t-25 {margin-top: 25px !important;}
-        .m-l-300 {margin-left: 300px !important;}
-        .m-l-180 {margin-left: 180px !important;}
-        .m-t-unt {margin-top: -1px !important;}
-        .m-clear {margin: 0 !important;}
-        .p-clear {padding: 0 !important;}
+            .h10 {height: 12px;}
 
-        .line_col {}
-        .under_field {height: 20px; margin: 0 0 20px 0; border-bottom: 1px solid black; position: relative; display: inline-block; clear: both;}
-        .under_field > i {font-style: normal;}
-        .under_field > span {position: absolute; left: 0; right: 0; text-align: center; color: #606060; bottom: -20px; font-size: 12px;}
+            .m-t-15 {margin-top: 15px !important;}
+            .m-t-25 {margin-top: 25px !important;}
+            .m-l-300 {margin-left: 300px !important;}
+            .m-l-180 {margin-left: 180px !important;}
+            .m-t-unt {margin-top: -1px !important;}
+            .m-clear {margin: 0 !important;}
+            .p-clear {padding: 0 !important;}
 
-        .under_field_line {height: 20px; margin: 0 0 15px 0; border-bottom: 1px solid black; position: relative; display: block;}
-        .under_field_line > i {height: 21px; padding: 0 5px 0 0; background: white; display: block; position: absolute; font-style: normal;}
-        .under_field_line > span {position: absolute; left: 0; right: 0; text-align: center; color: #606060; bottom: -16px; font-size: 12px;}
+            .line_col {}
+            .under_field {height: 20px; margin: 0 0 20px 0; border-bottom: 1px solid black; position: relative; display: inline-block; clear: both;}
+            .under_field > i {font-style: normal;}
+            .under_field > span {position: absolute; left: 0; right: 0; text-align: center; color: #606060; bottom: -20px; font-size: 12px;}
 
-        .wub {min-height: 20px; height: auto; border: 0; margin: 5px 0 0 0;}
+            .under_field_line {height: 20px; margin: 0 0 15px 0; border-bottom: 1px solid black; position: relative; display: block;}
+            .under_field_line > i {height: 21px; padding: 0 5px 0 0; background: white; display: block; position: absolute; font-style: normal;}
+            .under_field_line > span {position: absolute; left: 0; right: 0; text-align: center; color: #606060; bottom: -16px; font-size: 12px;}
 
-        .month-fl {width: 225px; float: right; height: 21px; padding: 0 5px 0 10px; background: white; text-align: right;}
-        .month-fl > span {height: 20px; margin: 0 5px 0 0; border-bottom: 1px solid black; display: inline-block;}
-        .month-fl > span:nth-child(1) {width: 35px;}
-        .month-fl > span:nth-child(2) {width: 120px;}
-        .month-fl > span:nth-child(3) {width: 40px;}
+            .wub {min-height: 20px; height: auto; border: 0; margin: 5px 0 0 0;}
 
-        table.zit_v-form {border-top: 1px solid black; border-bottom: 1px solid black; border-collapse: collapse; margin: 15px 0;}
-        table.zit_v-form tr td {border-bottom: 1px solid black; padding: 3px 6px;}
-        table.zit_v-form tr td:nth-child(1) {border-right: 1px solid black;}
-        table.zit_v-form tr td:nth-child(2) {border-right: 1px solid black;}
-        table.zit_v-form tr td:nth-child(3) {border-right: 1px solid black;}
+            .month-fl {width: 225px; float: right; height: 21px; padding: 0 5px 0 10px; background: white; text-align: right;}
+            .month-fl > span {height: 20px; margin: 0 5px 0 0; border-bottom: 1px solid black; display: inline-block;}
+            .month-fl > span:nth-child(1) {width: 35px;}
+            .month-fl > span:nth-child(2) {width: 120px;}
+            .month-fl > span:nth-child(3) {width: 40px;}
 
-        table.zit_v-form2 {width: 700px; border-collapse: collapse;}
-        table.zit_v-form2 tr td {border: 1px solid black; padding: 3px 8px;}
+            table.zit_v-form {border-top: 1px solid black; border-bottom: 1px solid black; border-collapse: collapse; margin: 15px 0;}
+            table.zit_v-form tr td {border-bottom: 1px solid black; padding: 3px 6px;}
+            table.zit_v-form tr td:nth-child(1) {border-right: 1px solid black;}
+            table.zit_v-form tr td:nth-child(2) {border-right: 1px solid black;}
+            table.zit_v-form tr td:nth-child(3) {border-right: 1px solid black;}
 
-        .zit_v-form2--inner {border-collapse: collapse; border: 0;}
+            table.zit_v-form2 {width: 700px; border-collapse: collapse;}
+            table.zit_v-form2 tr td {border: 1px solid black; padding: 3px 8px;}
 
-        .date_subm { margin: 35px 0 15px 0;}
-        .date_subm .month-fl-sm {float: left;}
-        .date_subm .month-fl-sm > span {height: 20px; margin: 0 5px 0 0; border-bottom: 1px solid black; display: inline-block;}
-        .date_subm .month-fl-sm > span:nth-child(1) {width: 45px;}
-        .date_subm .month-fl-sm > span:nth-child(2) {width: 120px;}
-        .date_subm .month-fl-sm > span:nth-child(3) {width: 20px;}
-        .date_subm .signature {width: 240px; height: 20px; float: right; border-bottom: 1px solid black; position: relative;}
-        .date_subm .signature > span {position: absolute; left: 0; right: 0; text-align: center; color: #606060; bottom: -20px; font-size: 12px;}
+            .zit_v-form2--inner {border-collapse: collapse; border: 0;}
 
-        p {font-size: 11px;}
+            .date_subm { margin: 35px 0 15px 0;}
+            .date_subm .month-fl-sm {float: left;}
+            .date_subm .month-fl-sm > span {height: 20px; margin: 0 5px 0 0; border-bottom: 1px solid black; display: inline-block;}
+            .date_subm .month-fl-sm > span:nth-child(1) {width: 45px;}
+            .date_subm .month-fl-sm > span:nth-child(2) {width: 120px;}
+            .date_subm .month-fl-sm > span:nth-child(3) {width: 20px;}
+            .date_subm .signature {width: 240px; height: 20px; float: right; border-bottom: 1px solid black; position: relative;}
+            .date_subm .signature > span {position: absolute; left: 0; right: 0; text-align: center; color: #606060; bottom: -20px; font-size: 12px;}
 
-        .clear {clear: both;}    
+            p {font-size: 11px;}
+
+            .clear {clear: both;}
 
 
 
 
             @media print {
                 * {
-                        -webkit-print-color-adjust: exact;
-                        print-color-adjust: exact;
+                    -webkit-print-color-adjust: exact;
+                    print-color-adjust: exact;
                 }
 
                 html {
-                        text-rendering: optimizeLegibility !important;
-                        -webkit-font-smoothing: antialiased !important;
+                    text-rendering: optimizeLegibility !important;
+                    -webkit-font-smoothing: antialiased !important;
                 }
 
                 body {
-                        font-family: georgia, serif;
-                font-size: 1em;
-                        font-smooth: 1em;
-                        -moz-font-smooth: 1em;
-                        -webkit-font-smooth: 1em;
+                    font-family: georgia, serif;
+                    font-size: 1em;
+                    font-smooth: 1em;
+                    -moz-font-smooth: 1em;
+                    -webkit-font-smooth: 1em;
 
-                        column-count: 2;
-                        column-gap: 2em;
-                        column-rule: thin solid black;
+                    column-count: 2;
+                    column-gap: 2em;
+                    column-rule: thin solid black;
                 }
 
                 a[href^="http://"]:after, a[href^="ftp://"]:after {
-                  content: " (" attr(href) ")";
-                  color: blue;
-                  font-size: small;
+                    content: " (" attr(href) ")";
+                    color: blue;
+                    font-size: small;
                 }
 
                 section {page-break-after: always;}
                 h1 {page-break-after: avoid;}
                 p {page-break-inside: avoid; orphans:3; widows:2;}
                 ul, img {page-break-inside: avoid;}
-        }
-    </style>
+            }
+        </style>
         <div class="line_col ta-r">
             <div class="under_field w350 ta-c">[area]</u><i></i><span>(найменування структурного підрозділу</span></div><br />
             <div class="under_field w350 ta-c">Дніпропетровська</u><i></i><span>з питань соціального захисту населення)</span></div>
@@ -120,13 +132,13 @@
         <div class="line_col ta-c m-t-25">
             ЗАЯВА<br />
             про призначення житлової субсидії<br />
-            <div class="ta-l">Від [bankIdlastName] [bankIdfirstName] [bankIdmiddleName]<span>(прізвище, ім’я, по батькові)</span></div>
-            <div class="under_field_line ta-l">зареєстроване (для орендарів — фактичне) місце проживання:</div>
-            <div class="ta-l">[place_of_living]</div>
-            <div class="ta-l">контактний телефон [phone]
-                <div class="under_field_line ta-l m-l-300"><i>паспорт: </i>
-                    <div class="under_field_line ta-c m-l-180"></div></div></div>
-            <div class="under_field_line ta-l"><i>[bankIdPassport]</i><span>(серія, номер, ким і коли виданий)</span><div class="month-fl"><span></span><span></span><span></span>р.</div></div>
+            <div class="under_field_line ta-l b-b-0">Від [bankIdlastName] [bankIdfirstName] [bankIdmiddleName]<span>(прізвище, ім’я, по батькові)</span></div>
+            <div class="under_field_line ta-l b-b-0">зареєстроване (для орендарів — фактичне) місце проживання:</div>
+            <div class="under_field_line ta-l b-b-0">[place_of_living]</div>
+            <div class="under_field_line ta-l b-b-0">контактний телефон [phone]
+                <div class="under_field_line b-b-0 ta-l gtp m-l-300" style="margin: 5px 0 0 0;"><i>паспорт: </i>
+                    <div class="under_field_line ta-c m-l-180 b-b-0"></div></div></div>
+            <div class="under_field_line ta-l b-b-0"><i>[bankIdPassport]</i><span>(серія, номер, ким і коли виданий)</span><div class="month-fl"><span></span><span></span><span></span>р.</div></div>
             <div class="under_field_line ta-l"><i>реєстраційний номер облікової картки платника податків: [book]</i><span>(крім осіб, які мають відмітку у паспорті про право здійснювати платежі за серією та номером паспорта)</span></div>
             <div class="under_field_line wub ta-l ti-15 m-t-25">Прошу призначити субсидію для відшкодування витрат на оплату житлово-комунальних послуг, на придбання скрапленого газу, твердого та рідкого пічного побутового палива: [subsidy].</div>
             <div class="under_field_line wub ta-l ti-15">Відомості про житлово-комунальні послуги, якими користуються особи, які зареєстровані (фактично проживають) у житловому приміщенні/будинку.</div>
@@ -198,4 +210,11 @@
             <div class="clear"></div>
             <p>Примітка. Ця заява заповнюється особою, на яку відкрито особовий рахунок із сплати житлово-комунальних послуг (особою, яка фактично сплачує вартість одержуваних послуг).</p>
         </div>
-</div>
+    </div>
+
+
+
+</section>
+</body>
+</html>
+
