--- a/wf-region/src/main/resources/pattern/print/subsidy_zayava.html
+++ b/wf-region/src/main/resources/pattern/print/subsidy_zayava.html
@@ -124,9 +124,9 @@
             <div class="under_field_line ta-l b-b-0">зареєстроване (для орендарів — фактичне) місце проживання:</div>
             <div class="under_field_line ta-l b-b-0">[place_of_living]</div>
             <div class="under_field_line ta-l b-b-0">контактний телефон [phone]
-                <div class="under_field_line b-b-0 ta-l gtp m-l-300" style="margin: 5px 0 0 0;"><i>паспорт: </i>
+                <div class="under_field_line b-b-0 ta-l gtp m-l-300" style="margin: 5px 0 0 0;"><i></i>
+                    <div class="under_field_line ta-l b-b-0"><i>Паспорт:</i>[bankIdPassport]</div>
                     <div class="under_field_line ta-c m-l-180 b-b-0"></div></div></div>
-            <div class="under_field_line ta-l b-b-0"><i>[bankIdPassport]</i><span>(серія, номер, ким і коли виданий)</span><div class="month-fl"><span></span><span></span><span></span>р.</div></div>
             <div class="under_field_line ta-l"><i>реєстраційний номер облікової картки платника податків: [book]</i><span>(крім осіб, які мають відмітку у паспорті про право здійснювати платежі за серією та номером паспорта)</span></div>
             <div class="under_field_line wub ta-l ti-15 m-t-25">Прошу призначити субсидію для відшкодування витрат на оплату житлово-комунальних послуг, на придбання скрапленого газу, твердого та рідкого пічного побутового палива: [subsidy].</div>
             <div class="under_field_line wub ta-l ti-15">Відомості про житлово-комунальні послуги, якими користуються особи, які зареєстровані (фактично проживають) у житловому приміщенні/будинку.</div>
