--- a/wf-region/src/main/resources/pattern/print/subsidy_zayava.html
+++ b/wf-region/src/main/resources/pattern/print/subsidy_zayava.html
@@ -2,79 +2,97 @@
         <style type="text/css">
             html, body {margin: 0; padding: 0; height: 100%; font: 400 14px/16px 'Tahoma';}
 
-            .print_wrap {width: 705px; padding: 35px 25px 85px 35px; min-height: 100%; height: 100%; margin: 0 auto;}
+       .print_wrap {width: 705px; padding: 35px 25px 85px 35px; min-height: 100%; height: 100%; margin: 0 auto;}
 
-            .ta-r {text-align: right;}
-            .ta-l {text-align: left;}
-            .ta-c {text-align: center;}
+.ta-r {text-align: right !important;}
+.ta-l {text-align: left !important;}
+.ta-c {text-align: center !important;}
 
-            .ti-15 {text-indent: 25px;}
+.ti-15 {text-indent: 25px;}
 
-            .fw {width: 100%;}
+.fw {width: 100%;}
 
-            .w350 {width: 350px;}
-            .w225 {width: 225px;}
-            .w145 {width: 145px;}
-            .w185 {width: 185px;}
-            .w135 {width: 135px;}
-            .w265 {width: 265px;}
+.w350 {width: 350px;}
+.w225 {width: 225px;}
+.w145 {width: 145px;}
+.w185 {width: 185px;}
+.w101 {width: 101px;}
+.w130 {width: 130px;}
+.w135 {width: 135px;}
+.w265 {width: 265px;}
+.w500 {width: 500px;}
 
-            .b-t-0 {border-top: 0 !important;}
-            .b-l-0 {border-left: 0 !important;}
-            .b-r-0 {border-right: 0 !important;}
-            .b-b-0 {border-bottom: 0 !important;}
+.b-t-0 {border-top: 0 !important;}
+.b-l-0 {border-left: 0 !important;}
+.b-r-0 {border-right: 0 !important;}
+.b-b-0 {border-bottom: 0 !important;}
 
-            .h10 {height: 12px;}
+.hint-l-220 > span {margin-left: 220px !important;}
 
-            .m-t-15 {margin-top: 15px !important;}
-            .m-t-25 {margin-top: 25px !important;}
-            .m-l-300 {margin-left: 300px !important;}
-            .m-l-180 {margin-left: 180px !important;}
-            .m-t-unt {margin-top: -1px !important;}
-            .m-clear {margin: 0 !important;}
-            .p-clear {padding: 0 !important;}
+.h10 {height: 12px;}
 
-            .line_col {}
-            .under_field {height: 20px; margin: 0 0 20px 0; border-bottom: 1px solid black; position: relative; display: inline-block; clear: both;}
-            .under_field > i {font-style: normal;}
-            .under_field > span {position: absolute; left: 0; right: 0; text-align: center; color: #606060; bottom: -20px; font-size: 12px;}
+.m-t-15 {margin-top: 15px !important;}
+.m-t-25 {margin-top: 25px !important;}
+.m-l-65 {margin-left: 65px !important;}
+.m-l-120 {margin-left: 120px !important;}
+.m-l-180 {margin-left: 180px !important;}
+.m-l-250 {margin-left: 250px !important;}
+.m-l-300 {margin-left: 300px !important;}
+.m-l-380 {margin-left: 380px !important;}
+.m-t-unt {margin-top: -1px !important;}
+.m-clear {margin: 0 !important;}
+.p-clear {padding: 0 !important;}
 
-            .under_field_line {height: 20px; margin: 0 0 15px 0; border-bottom: 1px solid black; position: relative; display: block;}
-            .under_field_line > i {height: 21px; padding: 0 5px 0 0; background: white; display: block; position: absolute; font-style: normal;}
-            .under_field_line > span {position: absolute; left: 0; right: 0; text-align: center; color: #606060; bottom: -16px; font-size: 12px;}
+.gtp {top: -21px;}
 
-            .wub {min-height: 20px; height: auto; border: 0; margin: 5px 0 0 0;}
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    .wb-fix {width: 135px;}
+}
 
-            .month-fl {width: 225px; float: right; height: 21px; padding: 0 5px 0 10px; background: white; text-align: right;}
-            .month-fl > span {height: 20px; margin: 0 5px 0 0; border-bottom: 1px solid black; display: inline-block;}
-            .month-fl > span:nth-child(1) {width: 35px;}
-            .month-fl > span:nth-child(2) {width: 120px;}
-            .month-fl > span:nth-child(3) {width: 40px;}
+.line_col {}
+.under_field {height: 20px; margin: 0 0 20px 0; border-bottom: 1px solid black; position: relative; display: inline-block; clear: both;}
+.under_field > i {font-style: normal;}
+.under_field > span {position: absolute; left: 0; right: 0; text-align: center; color: #606060; bottom: -20px; font-size: 12px;}
 
-            table.zit_v-form {border-top: 1px solid black; border-bottom: 1px solid black; border-collapse: collapse; margin: 15px 0;}
-            table.zit_v-form tr td {border-bottom: 1px solid black; padding: 3px 6px;}
-            table.zit_v-form tr td:nth-child(1) {border-right: 1px solid black;}
-            table.zit_v-form tr td:nth-child(2) {border-right: 1px solid black;}
-            table.zit_v-form tr td:nth-child(3) {border-right: 1px solid black;}
+.under_field_line {height: 20px; margin: 0 0 15px 0; padding: 0 0 0 0; border-bottom: 1px solid black; position: relative; display: block;}
+.under_field_line.right_side {float: right;}
+.under_field_line > i {height: 21px; padding: 0 5px 0 0; background: white; display: inline-block; position: relative; left: 0; font-style: normal;}
+.under_field_line > span {position: absolute; left: 0; right: 0; text-align: center; color: #606060; bottom: -16px; font-size: 12px;}
 
-            table.zit_v-form2 {width: 700px; border-collapse: collapse;}
-            table.zit_v-form2 tr td {border: 1px solid black; padding: 3px 8px;}
+.wub {min-height: 20px; height: auto; border: 0; margin: 5px 0 0 0;}
 
-            .zit_v-form2--inner {border-collapse: collapse; border: 0;}
+.month-fl {width: 225px; float: right; height: 21px; padding: 0 5px 0 10px; background: white; text-align: right;}
+.month-fl.left {float: left; padding: 0 5px 0 0;}
+.month-fl > span {height: 20px; margin: 0 5px 0 0; border-bottom: 1px solid black; display: inline-block;}
+.month-fl > span:nth-child(1) {width: 35px;}
+.month-fl > span:nth-child(2) {width: 120px;}
+.month-fl > span:nth-child(3) {width: 40px;}
 
-            .date_subm { margin: 35px 0 15px 0;}
-            .date_subm .month-fl-sm {float: left;}
-            .date_subm .month-fl-sm > span {height: 20px; margin: 0 5px 0 0; border-bottom: 1px solid black; display: inline-block;}
-            .date_subm .month-fl-sm > span:nth-child(1) {width: 45px;}
-            .date_subm .month-fl-sm > span:nth-child(2) {width: 120px;}
-            .date_subm .month-fl-sm > span:nth-child(3) {width: 20px;}
-            .date_subm .signature {width: 240px; height: 20px; float: right; border-bottom: 1px solid black; position: relative;}
-            .date_subm .signature > span {position: absolute; left: 0; right: 0; text-align: center; color: #606060; bottom: -20px; font-size: 12px;}
+table.zit_v-form {border-top: 1px solid black; border-bottom: 1px solid black; border-collapse: collapse; margin: 15px 0;}
+table.zit_v-form tr td {border-bottom: 1px solid black; padding: 3px 6px;}
+table.zit_v-form tr td:nth-child(1) {border-right: 1px solid black;}
+table.zit_v-form tr td:nth-child(2) {border-right: 1px solid black;}
+table.zit_v-form tr td:nth-child(3) {border-right: 1px solid black;}
 
-            p {font-size: 11px;}
+table.zit_v-form2 {width: 700px; border-collapse: collapse;}
+table.zit_v-form2 tr td {border: 1px solid black; padding: 3px 8px;}
 
-            .clear {clear: both;}
+.zit_v-form2--inner {border-collapse: collapse; border: 0;}
 
+.date_subm { margin: 20px 0 25px 0;}
+.date_subm .month-fl-sm {float: left;}
+.date_subm.invert .month-fl-sm {float: right;}
+.date_subm .month-fl-sm > span {height: 20px; margin: 0 5px 0 0; border-bottom: 1px solid black; display: inline-block;}
+.date_subm .month-fl-sm > span:nth-child(1) {width: 45px;}
+.date_subm .month-fl-sm > span:nth-child(2) {width: 120px;}
+.date_subm .month-fl-sm > span:nth-child(3) {width: 20px;}
+.date_subm .signature {width: 240px; height: 20px; float: right; border-bottom: 1px solid black; position: relative;}
+.date_subm.invert .signature {float: left;}
+.date_subm .signature > span {position: absolute; left: 0; right: 0; text-align: center; color: #606060; bottom: -20px; font-size: 12px;}
+
+p {font-size: 11px;}
+
+.clear {clear: both;}
 
 
 
@@ -114,21 +132,19 @@
             }
         </style>
         <div class="line_col ta-r">
-            <div class="under_field w350 ta-c">[area]</u><i></i><span>(найменування структурного підрозділу</span></div><br />
-            <div class="under_field w350 ta-c">Дніпропетровська</u><i></i><span>з питань соціального захисту населення)</span></div>
+            <div class="under_field w350 ta-l"><i>[area]</i><span>(найменування структурного підрозділу</span></div><br />
+            <div class="under_field w350 ta-l"><i>у м. Дніпропетровську</i><span>з питань соціального захисту населення)</span></div>
         </div>
         <div class="line_col ta-c m-t-25">
             ЗАЯВА<br />
             про призначення житлової субсидії<br />
-            <div class="under_field_line ta-l b-b-0">Від [bankIdlastName] [bankIdfirstName] [bankIdmiddleName]<span>(прізвище, ім’я, по батькові)</span></div>
-            <div class="under_field_line ta-l b-b-0">зареєстроване (для орендарів — фактичне) місце проживання:</div>
-            <div class="under_field_line ta-l b-b-0">[place_of_living]</div>
-            <div class="under_field_line ta-l b-b-0">контактний телефон [phone]
-                <div class="under_field_line b-b-0 ta-l gtp m-l-300" style="margin: 5px 0 0 0;"><i></i>
-                    <div class="under_field_line ta-l b-b-0"><i>Паспорт:</i>[bankIdPassport]</div>
-                    <div class="under_field_line ta-c m-l-180 b-b-0"></div></div></div>
-            <div class="under_field_line ta-l"><i>реєстраційний номер облікової картки платника податків: [book]</i><span>(крім осіб, які мають відмітку у паспорті про право здійснювати платежі за серією та номером паспорта)</span></div>
-            <div class="under_field_line wub ta-l ti-15 m-t-25">Прошу призначити субсидію для відшкодування витрат на оплату житлово-комунальних послуг, на придбання скрапленого газу, твердого та рідкого пічного побутового палива: [subsidy].</div>
+            <div class="under_field_line ta-l"><i>Від</i>[bankIdlastName] [bankIdfirstName] [bankIdmiddleName]<span>(прізвище, ім’я, по батькові)</span></div>
+            <div class="under_field_line ta-l"><i>зареєстроване (для орендарів — фактичне) місце проживання:</i>[place_of_living]</div>
+            <div class="under_field_line ta-l"><i>контактний телефон</i>[phone]</div>
+            <div class="under_field_line ta-l b-b-0"><i>паспорт:</i></div>
+            <div class="under_field_line ta-l b-b-0">[bankIdPassport]<span>(ким і коли виданий)</span></div>
+            <div class="under_field_line ta-l"><i>реєстраційний номер облікової картки платника податків:</i>[book]<span>(крім осіб, які мають відмітку у паспорті про право здійснювати платежі за серією та номером паспорта)</span></div>
+            <div class="under_field_line wub ta-l ti-15 m-t-25">Прошу призначити субсидію для відшкодування витрат на оплату житлово-комунальних послуг, на придбання скрапленого газу, твердого та рідкого пічного побутового палива (необхідне підкреслити).</div>
             <div class="under_field_line wub ta-l ti-15">Відомості про житлово-комунальні послуги, якими користуються особи, які зареєстровані (фактично проживають) у житловому приміщенні/будинку.</div>
             <table class="zit_v-form">
                 <tr>
