--- a/central-js/client/index.html
+++ b/central-js/client/index.html
@@ -137,6 +137,7 @@
 <script src="app/common/services/activiti.service.js"></script>
 <script src="app/common/services/admin.service.js"></script>
 <script src="app/common/services/bankid.service.js"></script>
+<script src="app/common/services/country.service.js"></script>
 <script src="app/common/services/messages.service.js"></script>
 <script src="app/common/services/places.service.js"></script>
 <script src="app/common/services/service.service.js"></script>
