#586 add spinner to documents.user view

--- a/central-js/client/app/documents/user/index.html
+++ b/central-js/client/app/documents/user/index.html
@@ -1,1 +1,8 @@
-<div ui-view="content"></div>
+<div ui-view="content">
+
+<center>
+<!-- this view is shown temporarily before moving to views for authentication or for user's content -->
+<img align="center" class="text-center section-preloader" src="assets/images/loading.gif" alt="Loading"/>
+</center>
+
+</div>
