--- a/central-js/client/app/service/city/built-in/bankid.html
+++ b/central-js/client/app/service/city/built-in/bankid.html
@@ -105,6 +105,7 @@
                                                   ng-required="property.required"></dropdown-country>
 
                                 <input ng-switch-when="string"
+                                      data-validation-marker="{{property.validationMarker}}"
                                        type="text"
                                        name="{{property.id}}"
                                        ng-hide="property.id==='resident'"
@@ -209,6 +210,7 @@
                                 <div ng-message="pattern">Значення має бути числом.</div>
                                 <div ng-message="email">Помилка в email.</div>
                                 <div ng-message="tel">Помилка в номері телефону.</div>
+                                <div ng-message="autovin">Помилка у VIN-номері авто.</div>
                             </div>
                         </div>
                         <div class="row">
