--- a/wf-region/src/main/resources/pattern/print/kalush_rda_1_zayava.html
+++ b/wf-region/src/main/resources/pattern/print/kalush_rda_1_zayava.html
@@ -108,7 +108,7 @@ p {font-size: 11px;}
     <div class="w365 line_col ta-l p-right xs-font">
         <p>Начальнику управління Держземагентства у Калуському районі</p>
 
-        <p >[bankIdlastName] [bankIdfirstName] [bankIdmiddleName]</p>
+        <p >[clFio]</p>
 
         <p class="m-clear"><span class="m-r-12">адреса</span>[bankIdAddress]</p>
         <p>тел. [bankIdPhone]</p>
