dnepr_dms html code update 3

--- a/wf-region/src/main/resources/pattern/print/dnepr_dms_print.html
+++ b/wf-region/src/main/resources/pattern/print/dnepr_dms_print.html
@@ -1,6 +1,11 @@
-<div>
-<style type="text/css">
-html, body {margin: 0; padding: 0; height: 100%; font: 400 14px/16px 'Tahoma';}
+<!DOCTYPE html>
+<html>
+<head lang="ru">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Заява - регистрация проживания</title>
+	
+	<style type="text/css">
+	html, body {margin: 0; padding: 0; height: 100%; font: 400 14px/16px 'Tahoma';}
 
 .print_wrap {width: 705px; padding: 35px 25px 85px 35px; min-height: 100%; height: 100%; margin: 0 auto;}
 
@@ -92,12 +97,10 @@ table.zit_v-form2 tr td {border: 1px solid black; padding: 3px 8px;}
 p {font-size: 11px;}
 
 .clear {clear: both;}
-
-
-
-</style>
-
-
+	</style>
+</head>
+<body>
+<section class="print_wrap">
     <div class="line_col ta-r">
         <div class="under_field w350 ta-l"><i>Начальникові</i><span>(найменування</span></div><br />
         <div class="under_field w350 ta-l"><i></i><span>територіального підрозділу ДМС України)</span></div><br />
@@ -106,12 +109,12 @@ p {font-size: 11px;}
     </div>
     <div class="line_col ta-c m-t-25">
         <b>ЗАЯВА<br />про реєстрацію місця проживання</b><br />
-        <div class="under_field_line ta-l"><i>Я, [bankIdlastName] [bankIdfirstName] [bankIdmiddleName]</i><span>(прізвище, ім’я, по батькові)</span></div>
-        <div class="under_field_line ta-l"><i>[DOB] || [POB]</i><span>(дата і місце народження)</span></div>
-        <div class="under_field_line ta-l"><i>[citizenship]</i><span>(громадянство / підданство)</span></div>
+        <div class="under_field_line ta-l"><i>Я,</i><span>(прізвище, ім’я, по батькові)</span></div>
+        <div class="under_field_line ta-l"><span>(дата і місце народження)</span></div>
+        <div class="under_field_line ta-l"><span>(громадянство / підданство)</span></div>
         <div class="under_field_line ta-l"></div>
         <div class="ta-l">прошу зареєструвати моє місце проживання/місце проживання моєї дитини (зайве закреслити)</div>
-        <div class="under_field_line ta-l"><i>[kidsName] [kidsFirstName] [kidsMiddleName]</i><span>(прізвище, ім'я, по батькові дитини)</span></div>
+        <div class="under_field_line ta-l"><span>(прізвище, ім'я, по батькові дитини)</span></div>
         <div class="under_field_line ta-l"><span>(дата і місце народження)</span></div>
         <div class="under_field_line ta-l"><span>(громадянство / підданство)</span></div>
         <div class="under_field_line ta-l"><i>за адресою:</i><span>(найменування адміністративно-територіальної одиниці)</span></div>
@@ -168,3 +171,6 @@ p {font-size: 11px;}
         <div class="under_field_line ta-l w225"></div>
         <div class="ta-l">* Підпис власника/співвласників житла або їх уповноважених органів,  наймача та членів його сім'ї не потрібен у разі вселення до батьків їх неповнолітніх дітей. </div>
     </div>
+</section>
+</body>
+</html>
