dnepr_dms html code update 3

--- a/wf-region/src/main/resources/pattern/print/dnepr_dms_print.html
+++ b/wf-region/src/main/resources/pattern/print/dnepr_dms_print.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head lang="ru">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Заява - регистрация проживания</title>
+<div>
 	
 	<style type="text/css">
 	html, body {margin: 0; padding: 0; height: 100%; font: 400 14px/16px 'Tahoma';}
@@ -171,6 +167,4 @@ p {font-size: 11px;}
         <div class="under_field_line ta-l w225"></div>
         <div class="ta-l">* Підпис власника/співвласників житла або їх уповноважених органів,  наймача та членів його сім'ї не потрібен у разі вселення до батьків їх неповнолітніх дітей. </div>
     </div>
-</section>
-</body>
-</html>
+</div>
