dnepr_dms html code update 4

--- a/wf-region/src/main/resources/pattern/print/dnepr_dms_print.html
+++ b/wf-region/src/main/resources/pattern/print/dnepr_dms_print.html
@@ -94,9 +94,7 @@ p {font-size: 11px;}
 
 .clear {clear: both;}
 	</style>
-</head>
-<body>
-<section class="print_wrap">
+
     <div class="line_col ta-r">
         <div class="under_field w350 ta-l"><i>Начальникові</i><span>(найменування</span></div><br />
         <div class="under_field w350 ta-l"><i></i><span>територіального підрозділу ДМС України)</span></div><br />
@@ -167,4 +165,4 @@ p {font-size: 11px;}
         <div class="under_field_line ta-l w225"></div>
         <div class="ta-l">* Підпис власника/співвласників житла або їх уповноважених органів,  наймача та членів його сім'ї не потрібен у разі вселення до батьків їх неповнолітніх дітей. </div>
     </div>
-</div>
+</div>d
