dnepr_dms html update 5

--- a/wf-region/src/main/resources/pattern/print/dnepr_dms_print.html
+++ b/wf-region/src/main/resources/pattern/print/dnepr_dms_print.html
@@ -165,4 +165,4 @@ p {font-size: 11px;}
         <div class="under_field_line ta-l w225"></div>
         <div class="ta-l">* Підпис власника/співвласників житла або їх уповноважених органів,  наймача та членів його сім'ї не потрібен у разі вселення до батьків їх неповнолітніх дітей. </div>
     </div>
-</div>d
+</div>
