validateByMarkers implementation (wip-4)

--- a/central-js/client/app/service/city/built-in/bankid.html
+++ b/central-js/client/app/service/city/built-in/bankid.html
@@ -210,6 +210,10 @@
                                 <div ng-message="email">Помилка в email.</div>
                                 <div ng-message="tel">Помилка в номері телефону.</div>
                                 <div ng-message="autovin">Помилка у VIN-номері авто.</div>
+                                <div ng-message="textua">Текст може містити тількі українські літери або мінус чи пробіл.</div>
+                                <div ng-message="textru">Текст може містити тількі російські літери або мінус чи пробіл.</div>
+                                <div ng-message="dateformat">Дата може бути тільки формату DATE_FORMAT.</div>
+                                <div ng-message="dateelapsed">З/до дати з/після сьогоднішньої, має бути більше/менше ніж х-днів, х-місяців, х-років.</div>
                             </div>
                         </div>
                         <div class="row">
