karma-testing the validation service (wip-1)

--- a/central-js/client/index.html
+++ b/central-js/client/index.html
@@ -142,6 +142,7 @@
 <script src="app/common/services/places.service.js"></script>
 <script src="app/common/services/service.service.js"></script>
 <script src="app/common/services/validation.service.js"></script>
+<script src="app/common/services/validation.service.test.js"></script>
 <script src="app/common/states/statesRepository.provider.js"></script>
 <script src="app/documents/controllers/documents.controller.js"></script>
 <script src="app/documents/controllers/documentsbankid.controller.js"></script>
