fix process and print-form

--- a/wf-region/src/main/resources/pattern/print/subsidy_zayava.html
+++ b/wf-region/src/main/resources/pattern/print/subsidy_zayava.html
@@ -143,7 +143,7 @@ p {font-size: 11px;}
             <div class="under_field_line ta-l"><i>контактний телефон</i>[phone]</div>
             <div class="under_field_line ta-l b-b-0"><i>паспорт:</i></div>
             <div class="under_field_line ta-l b-b-0">[bankIdPassport]<span>(ким і коли виданий)</span></div>
-            <div class="under_field_line ta-l"><i>реєстраційний номер облікової картки платника податків:</i>[book]<span>(крім осіб, які мають відмітку у паспорті про право здійснювати платежі за серією та номером паспорта)</span></div>
+            <div class="under_field_line ta-l"><i>реєстраційний номер облікової картки платника податків:</i>[bankIdinn]<span>(крім осіб, які мають відмітку у паспорті про право здійснювати платежі за серією та номером паспорта)</span></div>
             <div class="under_field_line wub ta-l ti-15 m-t-25">Прошу призначити субсидію для відшкодування витрат на оплату житлово-комунальних послуг, на придбання скрапленого газу, твердого та рідкого пічного побутового палива (необхідне підкреслити).</div>
             <div class="under_field_line wub ta-l ti-15">Відомості про житлово-комунальні послуги, якими користуються особи, які зареєстровані (фактично проживають) у житловому приміщенні/будинку.</div>
             <table class="zit_v-form">
