--- a/wf-region/src/main/resources/pattern/print/subsidy_declaration.html
+++ b/wf-region/src/main/resources/pattern/print/subsidy_declaration.html
@@ -127,7 +127,7 @@
                     Розділ I. Загальні відомості<br />
                     <div class="under_field_line ta-l fw"><i>1.<u>[bankIdlastName] [bankIdfirstName] [bankIdmiddleName]</u></i><span>(прізвище, ім’я, по батькові)</span></div>
                     <div class="under_field_line wub ta-l">2. Характеристика житлового приміщення/будинку:<br />
-                        загальна площа <u>[total_place]</u> кв. метрів; опалювальна площа <u>[total_place]</u> кв. метрів;<br />
+                        загальна площа <u>[total_place]</u> кв. метрів; опалювальна площа <u>[warming_place]</u> кв. метрів;<br />
                         будинок <u>[place_type]</u>;<br />
                         кількість поверхів у будинку <u>[floors]</u>
                     </div>
@@ -142,6 +142,13 @@
                 <td class="w101">Серія та номер паспорта</td>
                 <td>Реєстраційний номер облікової картки платника податків або серія та номер паспорта (для осіб, які мають відмітку у паспорті про право здійснювати платежі за його серією та номером)</td>
                 <td>Примітки</td>
+            </tr>
+            <tr>
+                <td class="h10">[bankIdlastName] [bankIdfirstName] [bankIdmiddleName]</td>
+                <td>[date_of_birth]</td>
+                <td>[bankIdPassport]</td>
+                <td>[bankIdinn]</td>
+                <td></td>
             </tr>
             <tr>
                 <td class="h10">[fio1]</td>
@@ -178,18 +185,11 @@
                 <td></td>
                 <td></td>
             </tr>
-            <tr>
-                <td class="h10"></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
         </table>
         <table class="zit_v-form2 m-t-unt">
             <tr>
                 <td class="ta-l">
-                    <div class="under_field_line wub ta-l m-clear">Розділ II.<br /> Всі види доходів фактично проживаючих у житловому приміщенні/будинку осіб, які зареєстровані<br /> (не зареєстровані - для орендарів), за період з ________ 20__ р. до __________ 20__ року</div>
+                    <div class="under_field_line wub ta-l m-clear">Розділ II.<br /> Всі види доходів фактично проживаючих у житловому приміщенні/будинку осіб, які зареєстровані<br /> (не зареєстровані - для орендарів), за період з [date_from] р. до [date_to]</div>
                 </td>
             </tr>
         </table>
@@ -209,9 +209,14 @@
                 </td>
             </tr>
             <tr>
+                <td class="h10">[bankIdlastName] [bankIdfirstName] [bankIdmiddleName]</td>
+                <td class="w101 p-clear">[income0]</td>
+                <td class="w265">[org0]</td>
+            </tr>
+            <tr>
                 <td class="h10">[fio1]</td>
-                <td class="w101 p-clear">[income1]</td>
-                <td class="w265">[org1]</td>
+                <td>[income1]</td>
+                <td>[org1]</td>
             </tr>
             <tr>
                 <td class="h10">[fio2]</td>
@@ -222,11 +227,6 @@
                 <td class="h10">[fio3]</td>
                 <td>[income3]</td>
                 <td>[org3]</td>
-            </tr>
-            <tr>
-                <td class="h10"></td>
-                <td></td>
-                <td></td>
             </tr>
             <tr>
                 <td class="h10"></td>
