--- a/central-js/client/index.html
+++ b/central-js/client/index.html
@@ -95,16 +95,18 @@
 <script src="bower_components/angular-cookies/angular-cookies.js"></script>
 <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<script src="bower_components/moment/moment.js"></script>
+<script src="bower_components/angular-moment/angular-moment.js"></script>
 <script src="bower_components/lodash/dist/lodash.compat.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="bower_components/angular-messages/angular-messages.js"></script>
 <script src="bower_components/jquery.cookie/jquery.cookie.js"></script>
 <script src="bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
 <script src="bower_components/ng-clip/src/ngClip.js"></script>
-<script src="bower_components/angular-ui-uploader/dist/uploader.min.js"></script>
-<script src="bower_components/angular-ui-event/dist/event.min.js"></script>
 <script src="bower_components/intl-tel-input/build/js/intlTelInput.min.js"></script>
 <script src="bower_components/intl-tel-input/lib/libphonenumber/build/utils.js"></script>
+<script src="bower_components/angular-ui-uploader/dist/uploader.js"></script>
+<script src="bower_components/angular-ui-event/dist/event.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
