Dnepr dms html code update 2

--- a/wf-region/src/main/resources/pattern/print/dnepr_dms_print.html
+++ b/wf-region/src/main/resources/pattern/print/dnepr_dms_print.html
@@ -116,16 +116,22 @@ p {font-size: 11px;}
         <div class="under_field_line ta-l"></div>
         <!-- <div class="ta-l">прошу зареєструвати моє місце проживання/місце проживання моєї дитини (зайве закреслити)</div> -->
 		<div class="ta-l">  <span>Чи є у вас дитина молодша 14-и років яку Ви бажаєте заєреструвати</span></div>
-        <div class="under_field_line ta-l"> [kids] [kidsName] [kidsFirstName] [kidsMiddleName] <span>(прізвище, ім'я, по батькові дитини, якщо Ви бажаєте зареєструвати дитину)</span></div>
-        <div class="under_field_line ta-l"> [kidsPOB] ; [kidsDOB] <span>(дата і місце народження)</span></div>
+        <div class="under_field_line ta-l"> [kids] ; [kidsName]  [kidsFirstName] [kidsMiddleName] <span>(прізвище, ім'я, по батькові дитини, якщо Ви бажаєте зареєструвати дитину)</span></div>
+        <div class="under_field_line ta-l"> [kidsPOB] _  [kidsDOB] <span>(дата і місце народження)</span></div>
         <div class="under_field_line ta-l">[kidsCitizenship] <span>(громадянство / підданство)</span></div>
         <div class="under_field_line ta-l"><i>за адресою: [newCity]</i><span>(найменування адміністративно-територіальної одиниці)</span></div>
         <div class="under_field_line ta-l"><i>вул. [newStreet]</i>
             <div class="under_field_line ta-l m-l-380 gtp">
                 <i>, буд. [newHouse]</i>
-                <div class="under_field_line ta-l m-l-120 gtp">
+<!--                 <div class="under_field_line ta-l m-l-120 gtp">
                     <i>, корп. [newCorp]</i>
                     <div class="under_field_line ta-l m-l-120 gtp">
+                        <i>, кв. [newApartment]</i>
+                    </div>
+                </div> -->
+				<div class="under_field_line ta-l m-l-80 gtp">
+                    <i>, корп. [newCorp]</i>
+                    <div class="under_field_line ta-l m-l-80 gtp">
                         <i>, кв. [newApartment]</i>
                     </div>
                 </div>
