dnepr dms print version html/CSS update

--- a/wf-region/src/main/resources/pattern/print/dnepr_dms_print.html
+++ b/wf-region/src/main/resources/pattern/print/dnepr_dms_print.html
@@ -37,6 +37,7 @@ html, body {margin: 0; padding: 0; height: 100%; font: 400 14px/16px 'Tahoma';}
 
 .m-t-15 {margin-top: 15px !important;}
 .m-t-25 {margin-top: 25px !important;}
+.m-l-80 {margin-left: 80px !important;}
 .m-l-120 {margin-left: 120px !important;}
 .m-l-180 {margin-left: 180px !important;}
 .m-l-250 {margin-left: 250px !important;}
@@ -123,18 +124,13 @@ p {font-size: 11px;}
         <div class="under_field_line ta-l"><i>вул. [newStreet]</i>
             <div class="under_field_line ta-l m-l-380 gtp">
                 <i>, буд. [newHouse]</i>
-<!--                 <div class="under_field_line ta-l m-l-120 gtp">
-                    <i>, корп. [newCorp]</i>
-                    <div class="under_field_line ta-l m-l-120 gtp">
-                        <i>, кв. [newApartment]</i>
-                    </div>
-                </div> -->
-				<div class="under_field_line ta-l m-l-80 gtp">
+                 <div class="under_field_line ta-l m-l-80 gtp">
                     <i>, корп. [newCorp]</i>
                     <div class="under_field_line ta-l m-l-80 gtp">
                         <i>, кв. [newApartment]</i>
                     </div>
-                </div>
+                </div> 
+				
             </div>
         </div>
         <div class="under_field_line ta-l"><i>Паспортний документ</i> [bankIdPassport]<span>(серія, номер, дата видачі,</span></div>
