#604 Finished with points 1 and 2 of the task

--- a/dashboard-js/client/app/services/services.html
+++ b/dashboard-js/client/app/services/services.html
@@ -34,7 +34,7 @@
 
         </tab>
 
-        <tab heading="Виняткі робочого часу">
+        <tab heading="Винятки робочого часу">
           <div class="spacer15"></div>
           <div ng-include src="'app/services/exclusions/table.html'"></div>
         </tab>
