--- a/dashboard-js/client/app/services/working_hours/table.html
+++ b/dashboard-js/client/app/services/working_hours/table.html
@@ -20,11 +20,11 @@
       <p ng-show="slot.saRegionWeekDay.sa">Субота</p>
       <p ng-show="slot.saRegionWeekDay.su">Неділя</p>
     </td>
-    <td> з {{slot.sDateTimeAt}} до {{slot.sDateTimeTo}}</td>
+    <td> з {{slot.sDateTimeAt | date: 'HH:mm'}} до {{slot.sDateTimeTo | date: 'HH:mm'}}</td>
     <td>
       <div class="btn-group">
         <button type="button" class="btn btn-default" ng-click="workingHours.edit(slot)">Редагувати</button>
-        <button type="button" class="btn btn-danger" ng-click="workingHours.delete()">
+        <button type="button" class="btn btn-danger" ng-click="workingHours.delete(slot)">
           <i class="glyphicon glyphicon-trash"></i>
         </button>
       </div>
