#660 На главном портале, в профиль Киева добавить стандартное меню, как это отражено на скриншоте.

--- a/central-js/client/app/header/header.html
+++ b/central-js/client/app/header/header.html
@@ -11,7 +11,7 @@
             <br>
             <p class="sitename">портал державних послуг</p>
         </div>
-        <div class="collapse navbar-collapse" collapse="navBarIsCollapsed">
+        <div class="collapse navbar-collapse navbar-kyiv" collapse="navBarIsCollapsed">
             <ul class="nav navbar-nav navbar-right">
                 <li class="menu-item" ng-class="{selected: state.is('index')}">
                     <a ui-sref="index">
