--- a/central-js/client/index.html
+++ b/central-js/client/index.html
@@ -101,10 +101,10 @@
 <script src="bower_components/jquery.cookie/jquery.cookie.js"></script>
 <script src="bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
 <script src="bower_components/ng-clip/src/ngClip.js"></script>
-<script src="bower_components/angular-ui-uploader/dist/uploader.min.js"></script>
-<script src="bower_components/angular-ui-event/dist/event.min.js"></script>
 <script src="bower_components/intl-tel-input/build/js/intlTelInput.min.js"></script>
 <script src="bower_components/intl-tel-input/lib/libphonenumber/build/utils.js"></script>
+<script src="bower_components/angular-ui-uploader/dist/uploader.js"></script>
+<script src="bower_components/angular-ui-event/dist/event.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
