--- a/central-js/client/app/header/kyiv.header.html
+++ b/central-js/client/app/header/kyiv.header.html
@@ -1,5 +1,34 @@
 <nav class="navbar navbar-static-top kyiv-header-container">
   <div class="container">
     <span class="kyiv-header"></span>
+    <div class="collapse navbar-collapse navbar-kyiv" collapse="navBarIsCollapsed">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="menu-item" ng-class="{selected: state.is('index')}">
+          <a ui-sref="index">
+            <h4>Послуги</h4>
+          </a>
+        </li>
+        <li class="menu-item" ui-sref-active="selected">
+          <a ui-sref="index.documents" ui-sref-opts="{reload: true}">
+            <h4>Документи</h4>
+          </a>
+        </li>
+        <li class="menu-item" ui-sref-active="selected">
+          <a ui-sref="index.order.search">
+            <h4>Статуси</h4>
+          </a>
+        </li>
+        <li class="menu-item" ui-sref-active="selected">
+          <a ui-sref="index.journal.bankid">
+            <h4>Мій журнал</h4>
+          </a>
+        </li>
+        <li class="menu-item" ui-sref-active="selected">
+          <a ui-sref="index.about">
+            <h4>Про портал</h4>
+          </a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
